--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 body {
@@ -89,13 +87,14 @@ body {
 }
 
 .poster-container {
-    width: 880px;
+    width: 100%;
     height: 732px;
     background-image: url('./components/img/poster-photo.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     border-radius: 28px;
-    margin: 40px;
+    margin: 40px 50px 40px 40px;
 }
 
 .product-list {
@@ -187,21 +186,113 @@ body {
     text-decoration: underline;
 }
 
-.swiper-contaier {
-    padding: 50px;
-    background-color: #EAE4EE;
-}
-
 .swiper-wrapper {
+    padding: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #EAE4EE;
 }
 
 .card {
     padding: 16px;
     background-color: #fff;
     width: 305px;
+    height: 480px;
+}
 
-   height: 480px;
+.benefits-container {
+    padding: 48px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.benefit-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.benefit-card h3 {
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.footer {
+    padding: 46px 50px 113px;
+    background-color: #1C1817;
+    color: white;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.footer-left {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.footer-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 5px;
+    margin: 0;
+}
+
+.footer-list p {
+    font-size: 16px;
+}
+
+.footer-right {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 102px;
+}
+
+.clients-section, .categories-section, .contact-section {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+}
+
+
+.clients-section h3, .categories-section h3, .contact-section h3 {
+   font-size: 24px;
+   font-weight: 500;
+   margin: 0;
+} 
+
+.footer-nav {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.contact-nav {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.social-icon svg {
+    width: 32px;
+    height: 32px;
 }
