new file:   src/components/Brands/Brands.jsx 	new file:   src/components/Brands/Card/ProductCard.jsx 	new file:   src/components/Card/LaptopCard.jsx 	modified:   src/components/Card/ProductCard.jsx 	modified:   src/components/Main.jsx 	new file:   src/components/Slider/LaptopSlider.jsx 	new file:   src/components/Slider/MobileSlider.jsx 	deleted:    src/components/Slider/Slider.jsx 	new file:   src/components/Slider/ViewedSlider.jsx 	new file:   src/components/img/card/lenovo-laptop.png 	new file:   src/components/img/icons/next-icon.png 	new file:   src/components/img/icons/prev-icon.png 	new file:   src/components/img/samsung.png 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -186,12 +186,17 @@ body {
     text-decoration: underline;
 }
 
-.swiper-wrapper {
-    padding: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+.carousel-wrapper {
     background-color: #EAE4EE;
+    padding-bottom: 24px;
+}
+
+.brands-container {
+    padding-bottom: 24px;
+}
+.card {
+    margin-right: 20px;
 }
 
 .card-rate {
@@ -342,4 +347,41 @@ body {
 .social-icon svg {
     width: 32px;
     height: 32px;
+}
+
+.carousel-slide {
+    margin-right: 20px; /* Додайте потрібний відступ справа */
+}
+
+.arrow-container {
+    display: flex;
+    align-items: end;
+    justify-content: flex-end;
+    flex-direction: row;
+    padding-right: 10px;
+}
+
+.btn-arrow-prev, .btn-arrow-next {
+    padding: 2px;
+    display: flex;
+    align-items: center;
+    border: 3px solid #00820D;
+    border-radius: 12px;
+}
+
+.btn-arrow-prev:hover,
+.btn-arrow-next:hover {
+  border-color: #0ff; /* Змініть колір на ваш смак */
+}
+
+.btn-arrow-prev {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: 0;
+}
+
+.btn-arrow-next  {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: 0;
 }
