--- a/src/index.css
+++ b/src/index.css
@@ -310,6 +310,11 @@ i {
 .card {
     margin-right: 20px;
     border-radius: 15px;
+    border: 2px solid #5a3e7d07;
+}
+
+.card:hover {
+    border: 2px solid rgb(111, 76, 154);
 }
 
 .product-card {
@@ -358,6 +363,14 @@ i {
     padding-bottom: 10px;
     font-weight: 400;
     font-size: 24px;
+}
+
+.card-buy {
+    cursor: pointer;
+}
+
+.card-buy:hover  {
+
 }
 
 .card p {
