--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,6 @@ a {
     color: #fff;
     font-weight: 500;
     font-size: 42px;
-    transition: background-color 0.3s ease;
     /* Додаємо плавний перехід */
 }
 
@@ -171,7 +170,7 @@ i {
 
 .navigation-button {
     background-color: #fff !important;
-    border-radius: 10px !important;
+    border-radius: 15px !important;
     padding: 10px !important;
     width: 45px !important;
     height: 50px !important;
@@ -237,7 +236,9 @@ i {
 .catalog-items {
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
     justify-content: center;
+    width: 100%;
 }
 
 .catalog-item {
@@ -245,6 +246,7 @@ i {
     align-items: center;
     justify-content: space-between;
     gap: 135px;
+    width: 100%;
 }
 
 .catalog-list {
@@ -253,6 +255,8 @@ i {
     gap: 10px;
     color: #000;
     font-size: 24px;
+    width: 170px;
+    line-height: 150%;
 }
 
 .catalog-item img {
