modified:   src/components/Smartphones Page/Navigation/Catalog/Items.jsx 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,14 @@ i {
     flex-direction: column;
 }
 
+.ant-dropdown-menu {
+    border-radius: 0 !important;
+}
+  
+.ant-dropdown-menu-item {
+    border-radius: 0 !important;
+}
+
 .catalog-nav {
     display: flex;
     align-items: center;
