--- a/src/components/Smartphones Page/Navigation/Catalog/Catalog.module.css
+++ b/src/components/Smartphones Page/Navigation/Catalog/Catalog.module.css
@@ -1,22 +1,22 @@
 .overlay {
-    position: fixed;
-    top: 183px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    display: none;
-    pointer-events: none; 
+  position: fixed;
+  top: 183px;
+  left: 0;
+  z-index: 999;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
+  pointer-events: none;
 }
-  
+
 .overlay.show {
-    display: block;
-    pointer-events: auto;
+  display: block;
+  pointer-events: auto;
 }
 
 .arrow.right {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
