--- a/src/components/Smartphones Page/Smartphones.css
+++ b/src/components/Smartphones Page/Smartphones.css
@@ -1,12 +1,12 @@
 li {
-    list-style: none;
+  list-style: none;
 }
 
 .page-nav {
-    color: #808080;
-    transition: .2s ease-in-out;
+  color: #808080;
+  transition: 0.2s ease-in-out;
 }
 
 .page-nav:hover {
-    color: black;
+  color: black;
 }
