--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,7 @@ i {
 
 .poster-container {
     width: 100%;
-    height: 765px;
+    height: 780px;
     background-image: url('./components/MainPage/img/poster-photo.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -212,14 +212,14 @@ i {
 .product-list {
     background-color: #fff;
     padding: 24px;
-    padding-right: 20px;
     height: fit-content;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     margin-bottom: 0;
-    min-width: 375px;
+    width: 420px;
+    height: 772px;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
 }
 
@@ -260,6 +260,7 @@ i {
     justify-content: space-between;
     gap: 50px;
     width: 100%;
+    cursor: pointer;
 }
 
 .catalog-list {
