modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -219,8 +219,8 @@ i {
     justify-content: space-between;
     flex-direction: column;
     margin-bottom: 0;
-    width: 420px;
-    height: 772px;
+    width: 502px;
+    height: auto;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
 }
 
