modified:   src/components/MainPage/Catalog/Catalog.jsx 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ i {
     justify-content: space-between;
     flex-direction: column;
     margin-bottom: 0;
-    width: 507.3px;
+    min-width: 376px;
     height: auto;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
 }
