--- a/src/index.css
+++ b/src/index.css
@@ -162,8 +162,7 @@ i {
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
-    gap: 15px;
-
+    gap: 15px
 }
 
 .search-img {
@@ -269,7 +268,7 @@ i {
     display: flex;
     align-items: center;
     gap: 10px;
-    color: #000;
+    color: #1C1817;
     font-size: 24px;
     width: 240px;
     line-height: 150%;
